--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Welcome to Gutenprint 5.2.10!  Please read these notes carefully.
+Welcome to Gutenprint 5.2.10-pre1!  Please read these notes carefully.
 
 *** NOTE TO PACKAGERS: Please read the file README.package for issues
     that are of interest to distributors and packagers of Gutenprint.
@@ -8,8 +8,8 @@ Welcome to Gutenprint 5.2.10!  Please read these notes carefully.
 
 I) INTRODUCTION
 
-    This is Gutenprint version 5.2.10, a stable release of Gutenprint
-    5.2.  Gutenprint, formerly named Gimp-Print, is a suite of printer
+    This is Gutenprint version 5.2.10-pre1, a prerelease of Gutenprint
+    5.2.10.  Gutenprint, formerly named Gimp-Print, is a suite of printer
     drivers that may be used with most common UNIX print spooling
     systems, including CUPS, lpr, LPRng, or others.  These drivers
     provide high quality printing for UNIX (including Macintosh OS X
