Add support for xX630, 635, and 645 parallel to WorkForce printers.
Improve duplex for WorkForce 630/635/645.

--- a/NEWS
+++ b/NEWS
@@ -291,7 +291,16 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Epson inkjets:
 
+       EPSON Stylus NX630
+       EPSON Stylus NX635
+       EPSON Stylus NX645
+       EPSON Stylus SX630
+       EPSON Stylus SX635
+       EPSON Stylus SX645
        EPSON Stylus TX125
+       EPSON Stylus TX630
+       EPSON Stylus TX635
+       EPSON Stylus TX645
        EPSON Stylus C92
        EPSON Stylus CX7300
        EPSON Stylus D78
