--- a/README
+++ b/README
@@ -513,7 +513,7 @@ D) CUPS dye-sublimation backend
     of this section.
 
         Canon SELPHY ES series  (All models)
-        Canon SELPHY CP series  (All models except CP520, CP820 and CP910)
+        Canon SELPHY CP series  (All models)
         Kodak Professional 1400
         Kodak 805 Photo Printer
         Kodak 6800 Photo Printer
