--- a/README
+++ b/README
@@ -539,7 +539,7 @@ D) CUPS dye-sublimation backend
     supported by this backend.
 
     NOTE: While most of these printers are new as of Gutenprint 5.2.10, 
-    if you are upgrading from a previous relase and using one of these
+    if you are upgrading from 5.2.9 (or earlier) and using one of these
     models, you will need to remove and re-create your printer queue:
 
         Canon SELPHY ES series  (All models)
